Add reduce to zero problem